# mt-metrics-eval

./: README.md  pyproject.toml  setup.py
mt_metrics_eval/: __init__.py  data.py  data_test.py  meta_info.py  mt_metrics_eval.ipynb  mtme.py  pce.py  pce_test.py  ratings.py  ratings_test.py  score_mqm.py  score_sqm.py  standalone_ratings.py  stats.py  stats_test.py  tasks.py  tasks_test.py  tau_optimization.py  tau_optimization_test.py  ties_matter.ipynb  verify_scores_file.py  wmt22_metrics.ipynb  wmt23_metrics.ipynb
mt_metrics_eval/codalab/: eval.py  metadata
mt_metrics_eval/converters/: evalset_ratings_to_standalone.py  score_mqm.py  standalone_ratings_to_evalset.py
