[build-system]
requires = ["setuptools >= 65.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mt_metrics_eval"]

[project]
name = "mt-metrics-eval"
version = "0.0.4"
description = "Toolkit for evaluating Machine Translation metrics."
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "George Foster"},
]
keywords = ["evaluation", "metrics", "machine translation"]
dependencies = [
  "apache_beam",
  "dacite",
  "numpy",
  "scipy",
  "absl-py",
]
classifiers=[
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/google-research/mt-metrics-eval"

[project.scripts]
mtme = "mt_metrics_eval.mtme:main_cli"
mt_metrics_eval = "mt_metrics_eval.mtme:main_cli"